add auth, swagger
