# course3/2.server/5.server_http_api/task3.2.5.1/docs/swagger.json
@@ -1,11 +1,19 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "Гео-сервис",
+        "title": "Geo Service",
+        "contact": {},
+        "version": "0.1.0"
     },
     "paths": {
         "/api/address/geocode": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Обрабатывает POST запросы для получения адреса по координатам.",
                 "consumes": [
                     "application/json"
@@ -14,7 +22,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Поиск по координатам"
+                    "гео-сервис"
                 ],
                 "summary": "Получение адреса по координатам",
                 "parameters": [
@@ -24,7 +32,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.GeocodeRequest"
+                            "$ref": "#/definitions/address.GeocodeRequest"
                         }
                     }
                 ],
@@ -32,7 +40,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.Response"
+                            "$ref": "#/definitions/address.Response"
                         }
                     },
                     "400": {
@@ -58,6 +66,11 @@
         },
         "/api/address/search": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Обрабатывает POST запросы для поиска адресов.",
                 "consumes": [
                     "application/json"
@@ -66,7 +79,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Поиск по адресу"
+                    "гео-сервис"
                 ],
                 "summary": "Поиск по адресу",
                 "parameters": [
@@ -76,7 +89,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.SearchRequest"
+                            "$ref": "#/definitions/address.SearchRequest"
                         }
                     }
                 ],
@@ -84,7 +97,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.Response"
+                            "$ref": "#/definitions/address.Response"
                         }
                     },
                     "400": {
@@ -107,10 +120,111 @@
                     }
                 }
             }
+        },
+        "/api/login": {
+            "post": {
+                "description": "Логин пользователя и выдача JWT",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Логин",
+                "parameters": [
+                    {
+                        "description": "User Login Data",
+                        "name": "login",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.Login"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/register": {
+            "post": {
+                "description": "Register a new user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Регистрация",
+                "parameters": [
+                    {
+                        "description": "User Registration Data",
+                        "name": "register",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.Login"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "entity.Address": {
+        "address.Address": {
             "type": "object",
             "properties": {
                 "city": {
@@ -130,7 +244,7 @@
                 }
             }
         },
-        "entity.GeocodeRequest": {
+        "address.GeocodeRequest": {
             "type": "object",
             "properties": {
                 "lat": {
@@ -141,24 +255,42 @@
                 }
             }
         },
-        "entity.Response": {
+        "address.Response": {
             "type": "object",
             "properties": {
                 "addresses": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/entity.Address"
+                        "$ref": "#/definitions/address.Address"
                     }
                 }
             }
         },
-        "entity.SearchRequest": {
+        "address.SearchRequest": {
             "type": "object",
             "properties": {
                 "query": {
                     "type": "string"
                 }
             }
+        },
+        "auth.Login": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
