# course3/2.server/5.server_http_api/task3.2.5.1/internal/handlers/address.go
@@ -2,37 +2,22 @@ package handlers
 
 import (
 	"encoding/json"
-	"github.com/go-chi/chi"
-	httpSwagger "github.com/swaggo/http-swagger"
+	_ "httpapi/docs"
+	"httpapi/internal/address"
 	"net/http"
-	_ "task3.2.5.1/docs"
-	"task3.2.5.1/internal/address"
-	"task3.2.5.1/internal/entity"
 )
-
-func SetupRoutes(geoService *address.GeoService) *chi.Mux {
-	r := chi.NewRouter()
-
-	r.Post("/api/address/search", handleSearch(geoService))
-	r.Post("/api/address/geocode", handleGeocode(geoService))
-
-	// Настройка Swagger
-	r.Get("/swagger/*", httpSwagger.WrapHandler) // Для Swagger UI
-	r.Get("/swagger/index.html", httpSwagger.WrapHandler)
-
-	return r
-}
 
 // @Summary Поиск по адресу
 // @Description Обрабатывает POST запросы для поиска адресов.
-// @Tags Поиск по адресу
+// @Tags гео-сервис
 // @Accept json
 // @Produce json
-// @Param query body entity.SearchRequest true "Address Query"
-// @Success 200 {object} entity.Response
+// @Param query body address.SearchRequest true "Address Query"
+// @Success 200 {object} address.Response
 // @Failure 400 {object} map[string]string
 // @Failure 500 {object} map[string]string
 // @Router /api/address/search [post]
+// @Security BearerAuth
 func handleSearch(geoService *address.GeoService) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		if r.Method != http.MethodPost {
@@ -40,7 +25,7 @@ func handleSearch(geoService *address.GeoService) http.HandlerFunc {
 			return
 		}
 
-		var req entity.SearchRequest
+		var req address.SearchRequest
 		err := json.NewDecoder(r.Body).Decode(&req)
 		if err != nil {
 			http.Error(w, "Bad Request: "+err.Error(), http.StatusBadRequest)
@@ -62,14 +47,15 @@ func handleSearch(geoService *address.GeoService) http.HandlerFunc {
 
 // @Summary Получение адреса по координатам
 // @Description Обрабатывает POST запросы для получения адреса по координатам.
-// @Tags Поиск по координатам
+// @Tags гео-сервис
 // @Accept json
 // @Produce json
-// @Param query body entity.GeocodeRequest true "Address Query"
-// @Success 200 {object} entity.Response
+// @Param query body address.GeocodeRequest true "Address Query"
+// @Success 200 {object} address.Response
 // @Failure 400 {object} map[string]string
 // @Failure 500 {object} map[string]string
 // @Router /api/address/geocode [post]
+// @Security BearerAuth
 func handleGeocode(geoService *address.GeoService) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		if r.Method != http.MethodPost {
@@ -77,7 +63,7 @@ func handleGeocode(geoService *address.GeoService) http.HandlerFunc {
 			return
 		}
 
-		var req entity.GeocodeRequest
+		var req address.GeocodeRequest
 		err := json.NewDecoder(r.Body).Decode(&req)
 		if err != nil {
 			http.Error(w, "Bad Request: "+err.Error(), http.StatusBadRequest)
