# course3/2.server/5.server_http_api/task3.2.5.1/internal/repository/repo.go
@@ -1,0 +1,8 @@
+package repository
+
+type StorageRepository interface {
+	Create(login, password string) error
+	Read(login string) (string, error)
+	Update(loginOld, passwordNew string) error
+	Delete(login string) error
+}
